[package]
name = "foof"
description = "Fluoroperoxide: *another* quick file executor."
authors = ["Luna (lostkagamine)"]
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
clap = { version = "3.1.18", features = ["derive"] }
data-encoding = "2.3.2"
reqwest = "0.11.10"
ring = { version = "0.16.20", features = ["std"] }
semver = "1.0.9"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
termcolor = "1.1.3"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
